--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,21 @@
+server:
+  port: 8081
+  servlet:
+    context-path: '/api/'
 spring:
   application:
     name: cadastro
-  #jpa:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   #  properties:
   #    hibernate:
   #      dialect: org.hibernate.dialect.PostgresDialect
 
-server:
-  port: 8080
-  servlet:
-    context-path: '/api/'
+api:
+  security:
+    issuer: "Cadastro Empresa"
+    token:
+      secret: ${JWT_SECRET:12345678}
