--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   postgres-db:
     image: postgres:16.2
     restart: always
-    container_name: cadastro_db
+    container_name: register_db
     network_mode: bridge
     ports:
       - '5433:5432'
     environment:
       - "POSTGRES_USER=myuser"
       - "POSTGRES_PASSWORD=secret"
-      - "POSTGRES_DB=cadastro_db"
+      - "POSTGRES_DB=register_db"
